listener: Implement both plain text and SSL layer
Signed-off-by: Michal Novotny <mignov@gmail.com>

--- a/examples/article/config.d/sql.config
+++ b/examples/article/config.d/sql.config
@@ -1,8 +1,17 @@
-sql.type = mysql
-sql.host = localhost
-sql.user = root
-sql.database = cdvtest1
-sql.password.value = read://.password
-sql.password.format = base64
+#sql.type = mysql
+#sql.host = localhost
+#sql.user = root
+#sql.database = cdvtest1
+#sql.password.value = read://.password
+#sql.password.format = base64
 
-load_module mysql
+#load_module mysql
+
+# Following expressions should be the same:
+#   sql.type = idb
+#   sql.type = internal
+#   sql.type = cdb
+
+sql.type = idb
+sql.datadir = database
+sql.filename = article-web.cdb
