listener: Implement files hosting and fix TCP/plain communications
Signed-off-by: Michal Novotny <mignov@gmail.com>

--- a/examples/article/article.project
+++ b/examples/article/article.project
@@ -16,3 +16,4 @@ project.administrator.email = mignov@gmail.com
 project.config.file = config
 project.config.directory.definitions = definition
 project.config.directory.views = view
+project.config.directory.files = files
