--- a/examples/test/test.project
+++ b/examples/test/test.project
@@ -1,3 +1,12 @@
+# Hosting options
+host.http = localhost:2305
+host.secure = localhost:2306
+host.certificate.dir = certs
+host.certificate.root = rootcert.pem
+host.certificate.private = server-key.private
+host.certificate.public = server-key.pub
+host.path.xmlrpc = /xmlrpc
+
 # Project settings
 project.name = Test project
 project.administrator.name = Michal Novotny
