Notifiers: Implement basic notifiers for iDB use
Signed-off-by: Michal Novotny <mignov@gmail.com>

--- a/examples/test/test.project
+++ b/examples/test/test.project
@@ -36,5 +36,6 @@ project.administrator.email = mignov@gmail.com
 # Project configuration
 project.config.file = config
 project.config.directory.definitions = definition
+project.config.directory.database = database
 project.config.directory.scripts = scripts
 project.config.directory.views = view
