--- a/examples/article/article.project
+++ b/examples/article/article.project
@@ -16,5 +16,6 @@ project.administrator.email = mignov@gmail.com
 # Project configuration
 project.config.file = config
 project.config.directory.definitions = definition
+project.config.directory.database = database
 project.config.directory.views = view
 project.config.directory.files = files
